--- a/Projekt/Arduino/rotation/platformio.ini
+++ b/Projekt/Arduino/rotation/platformio.ini
@@ -13,6 +13,8 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 
+monitor_speed=2000000
+
 lib_deps =
   # Using a library name
   Servo
